initialing the package

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/BookShop
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://us-cdbr-east-02.cleardb.com/heroku_428d9dc1ba1200a
+spring.datasource.username=b6e15c9393c8a4
+spring.datasource.password=8c33f206
 spring.datasource.drive-class-name=com.mysql.cj.jdbc.Driver
